force-app/main/default/objects/Transaction_Management_History__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <description>Amount of the associated reimbursement.</description>
    <inlineHelpText>Amount of the associated reimbursement.</inlineHelpText>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>