force-app/main/default/objects/Transaction_Management_History__c/fields/Contact_Associated__c.field-meta.xml
<CustomField>
    <fullName>Contact_Associated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Hidden Field - Used for updating the history records if the contact is associated later in the Transaction.</description>
    <label>Contact Associated</label>
    <type>Checkbox</type>
</CustomField>