force-app/main/default/objects/Transaction_Management_History__c/fields/CreatedByName__c.field-meta.xml
<CustomField>
    <fullName>CreatedByName__c</fullName>
    <formula>CreatedBy.FirstName +&apos; &apos;+CreatedBy.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CreatedByName</label>
    <type>Text</type>
</CustomField>