force-app/main/default/objects/Transaction_Management_History__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Transaction Management Histories</relationshipLabel>
    <relationshipName>Transaction_Management_History</relationshipName>
    <type>Lookup</type>
</CustomField>