force-app/main/default/objects/Transaction_Management_History__c/fields/Customer_Id__c.field-meta.xml
<CustomField>
    <fullName>Customer_Id__c</fullName>
    <description>Local Customer Id of the Customer associated with the parent Transaction.</description>
    <formula>Transaction_Management__r.Contact__r.CustomerID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Local Customer Id of the Customer associated with the parent Transaction.</inlineHelpText>
    <label>Customer Id</label>
    <type>Text</type>
</CustomField>