force-app/main/default/objects/Transaction_Management_History__c/fields/Disposition__c.field-meta.xml
<CustomField>
    <fullName>Disposition__c</fullName>
    <formula>TEXT(Transaction_Management__r.Disposition__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Disposition</label>
    <type>Text</type>
</CustomField>