force-app/main/default/objects/Transaction_Management_History__c/fields/First_Name__c.field-meta.xml
<CustomField>
    <fullName>First_Name__c</fullName>
    <description>First Name of the Customer associated with the parent Transaction.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>First Name of the Customer associated with the parent Transaction.</inlineHelpText>
    <label>First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>