force-app/main/default/objects/Transaction_Management_History__c/fields/Issue__c.field-meta.xml
<CustomField>
    <fullName>Issue__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Issue</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Transaction Management Histories</relationshipLabel>
    <relationshipName>Transaction_Management_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>