force-app/main/default/objects/Transaction_Management_History__c/fields/Issue_Id__c.field-meta.xml
<CustomField>
    <fullName>Issue_Id__c</fullName>
    <formula>Issue__r.CaseNumber__c</formula>
    <label>Issue Number</label>
    <type>Text</type>
</CustomField>