force-app/main/default/objects/Transaction_Management_History__c/fields/Issue_Reviewed_By__c.field-meta.xml
<CustomField>
    <fullName>Issue_Reviewed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Issue Reviewed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Transaction_Management_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>