force-app/main/default/objects/Transaction_Management_History__c/fields/Issue_Reviewed_Date__c.field-meta.xml
<CustomField>
    <fullName>Issue_Reviewed_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Issue Reviewed Date</label>
    <type>DateTime</type>
</CustomField>