force-app/main/default/objects/Transaction_Management_History__c/fields/Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Last_Name__c</fullName>
    <description>Last Name of the Customer associated with the parent Transaction.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Last Name of the Customer associated with the parent Transaction.</inlineHelpText>
    <label>Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>