force-app/main/default/objects/Transaction_Management_History__c/fields/Letter_Type__c.field-meta.xml
<CustomField>
    <fullName>Letter_Type__c</fullName>
    <description>Letter Type from the associated Correspondence.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Letter Type from the associated Correspondence.</inlineHelpText>
    <label>Letter Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>