force-app/main/default/objects/Transaction_Management_History__c/fields/Operating_Company__c.field-meta.xml
<CustomField>
    <fullName>Operating_Company__c</fullName>
    <description>Operating company of the transaction.</description>
    <formula>TEXT(Transaction_Management__r.Operating_Company__r.OperatingCompany__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Operating company of the transaction.</inlineHelpText>
    <label>Operating Company</label>
    <type>Text</type>
</CustomField>