force-app/main/default/objects/Transaction_Management_History__c/fields/Package_Code__c.field-meta.xml
<CustomField>
    <fullName>Package_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Package Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>