force-app/main/default/objects/Transaction_Management_History__c/fields/Service_Group_Code__c.field-meta.xml
<CustomField>
    <fullName>Service_Group_Code__c</fullName>
    <label>Service Group Code</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Consumer</fullName>
            </value>
            <value>
                <fullName>Correspondence</fullName>
            </value>
            <value>
                <fullName>CRC</fullName>
            </value>
            <value>
                <fullName>CRCAGEVERIFY</fullName>
            </value>
            <value>
                <fullName>CUSTOMERS</fullName>
            </value>
            <value>
                <fullName>ISSUES</fullName>
            </value>
            <value>
                <fullName>SGProgramAllocation</fullName>
            </value>
            <value>
                <fullName>Survey</fullName>
            </value>
            <value>
                <fullName>TAVDecline</fullName>
            </value>
            <value>
                <fullName>UpdateSurvey</fullName>
            </value>
            <value>
                <fullName>PNASRequest</fullName>
            </value>
            <value>
                <fullName>CRCAGEVERIFYRQ</fullName>
            </value>
            <value>
                <fullName>APPROVALS</fullName>
            </value>
            <value>
                <fullName>SRPROGRAMALLOCATION</fullName>
            </value>
            <value>
                <fullName>CUSTOMER</fullName>
            </value>
            <value>
                <fullName>Chat</fullName>
            </value>
            <value>
                <fullName>IVR REIMBURSEMENTS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>