force-app/main/default/objects/Transaction_Management_History__c/fields/Service_Request_Code__c.field-meta.xml
<CustomField>
    <fullName>Service_Request_Code__c</fullName>
    <description>Denotes the History type.</description>
    <inlineHelpText>Denotes the History type.</inlineHelpText>
    <label>Service Request Code</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AGE_VERIFY</fullName>
            </value>
            <value>
                <fullName>CCNLOOKUP</fullName>
            </value>
            <value>
                <fullName>CORSP_OUTBOUND</fullName>
            </value>
            <value>
                <fullName>CREATE_REIMB</fullName>
            </value>
            <value>
                <fullName>CREATE_SURVEY</fullName>
            </value>
            <value>
                <fullName>CREATECUST</fullName>
            </value>
            <value>
                <fullName>CREATEISSUE</fullName>
            </value>
            <value>
                <fullName>UPDATE_REIMB</fullName>
            </value>
            <value>
                <fullName>UPDATE_SURVEY</fullName>
            </value>
            <value>
                <fullName>UPDATECUST</fullName>
            </value>
            <value>
                <fullName>UPDATEISSUE</fullName>
            </value>
            <value>
                <fullName>ENDCALL</fullName>
            </value>
            <value>
                <fullName>FULL_SEARCH</fullName>
            </value>
            <value>
                <fullName>AGE_VERIFICATION_REQUEST</fullName>
            </value>
            <value>
                <fullName>ISSUE_APPROVED</fullName>
            </value>
            <value>
                <fullName>SRPROGRAMALLOCATION</fullName>
            </value>
            <value>
                <fullName>CHAT_START</fullName>
            </value>
            <value>
                <fullName>EMAIL_ADDRESS_UPDATE</fullName>
            </value>
            <value>
                <fullName>EMAIL_CONFIRMED_UPDATE</fullName>
            </value>
            <value>
                <fullName>REIMBURSEMENT FOUND</fullName>
            </value>
            <value>
                <fullName>NO REIMBURSEMENT FOUND FOR CONSUMER</fullName>
            </value>
            <value>
                <fullName>MULTIPLE CONSUMERS FOUND</fullName>
            </value>
            <value>
                <fullName>NO CONSUMER FOUND</fullName>
            </value>
            <value>
                <fullName>CONSUMER IS NOT AGE VERIFIED</fullName>
            </value>
            <value>
                <fullName>ONLINE_VF_SENT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>