force-app/main/default/objects/Transaction_Management_History__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Status of the Survey associated.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Status of the Survey associated.</inlineHelpText>
    <label>Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>