force-app/main/default/objects/Transaction_Management_History__c/fields/Update_Reason__c.field-meta.xml
<CustomField>
    <fullName>Update_Reason__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Update Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>