force-app/main/default/objects/Transaction_Management_History__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>equals</operation>
        <value>30334723</value>
    </filters>
    <label>All</label>
</ListView>